Adaptando java 17